feat: Implement microcontroller data endpoints and Google Maps integration
- Added endpoints for receiving microcontroller data and batch uploads in main.py.
- Created models for microcontroller data and responses using Pydantic.
- Updated the frontend to include Google Maps API for visualizing routes.
- Developed a new GoogleMap component to render routes and markers based on microcontroller data.
- Introduced MapaRecorridos component for enhanced map visualization with legends and stats.
- Removed example .env file from the frontend.
- Added styles for the map and its components in Mapa.css and Dashboard.css.
- Created App_Simple.jsx for a simplified dashboard view.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reto Renault</title>
+    <!-- Google Maps API -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcjZ8Sem8REviQeMifTqHzL2ycrLTbvgo&libraries=geometry"></script>
   </head>
   <body>
     <div id="root"></div>
